--- a/src/pages/home/components/partner/partners.scss
+++ b/src/pages/home/components/partner/partners.scss
@@ -57,7 +57,7 @@
 			align-items: center;
 			justify-content: space-between;
 			flex-wrap: wrap;
-			margin: 5% 20%;
+			margin: 5% 25%;
 			.centerCard {
 				display: flex;
 				justify-content: center;
@@ -69,7 +69,7 @@
 					-25px -25px 50px #ffffff;
 				width: 24vw;
 				height: 24vh;
-				margin: 12%;
+				margin-top: 10%;
 				transition: all 0.5s ease-in-out;
 
 				img {
